# pc_live_player

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pack_release.ps1  package_release.ps1  vcpkg.json
dist_0607/douyin_qr/: README.txt  点这里启动.bat
gui/: KeyAuthClient.cpp  KeyAuthClient.hpp  KeyAuthDialog.cpp  KeyAuthDialog.hpp  KeyHeartbeat.cpp  KeyHeartbeat.hpp  MainWindow.cpp  MainWindow.hpp  QRPopupDialog.cpp  QRPopupDialog.hpp  QrImageWidget.cpp  QrImageWidget.hpp  StreamProvider.cpp  StreamProvider.hpp  StreamWorker.cpp  StreamWorker.hpp  UrlInputEdit.cpp  UrlInputEdit.hpp  api_config.hpp  gui_main.cpp
include/: app.h  app_config.h  app_types.h  audio_output.h  ffmpeg_stream.h  latency_monitor.h  qr_detector.h  status_history.h  ui_sdl.h
packaging/windows/: app.manifest
src/: app.c  app_config.c  audio_output.c  ffmpeg_stream.c  latency_monitor.c  main.c  qr_detector.c  status_history.c  ui_sdl.c
